[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/Machines/ChargeStation.png" type="Texture" id=1]
[ext_resource path="res://ChargeStation/ChargeStation.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[node name="ChargeStation" type="Area2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1.54223, 9.91027 )
rotation = 0.471239
scale = Vector2( 1, 1 )
build_mode = 1
polygon = PoolVector2Array( -31.5937, 20.6878, -17.7406, 19.241, -12.4285, 12.045, 14.4035, 11.8413, 24.1367, -2.0966, 32.1727, -3.94652, 40.6118, -11.6134, 38.3419, -16.0685, -8.61423, -15.712 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14, 19 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ChargeStation_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChargeStation_body_exited"]
